--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -29,7 +29,7 @@
   </head>
   <body class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-0695"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="index.html" class="u-image u-logo u-image-1" data-image-width="228" data-image-height="65">
-          <img src="images/Screenshot_1.png" class="">
+          <img src="../images/demo/Screenshot_1.png" class="">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
