--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -28,7 +28,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-0695"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="index.html" class="u-image u-logo u-image-1" data-image-width="228" data-image-height="65">
+        <a href="../index.html" class="u-image u-logo u-image-1" data-image-width="228" data-image-height="65">
           <img src="../images/demo/Screenshot_1.png" class="">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
